--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,6 @@
     </header>
     <div class="map" data-ng-controller="MainCtrl">
         <div class="content reveal-animation" data-ui-view></div>
-        <leaflet id="map" data-map-resize center="frankivsk" layers="layers" maxbounds="maxbounds" controls="controls" paths="paths" defaults="defaults"></leaflet>
+        <leaflet id="map" data-map-resize center="frankivsk" layers="layers" maxbounds="maxbounds" controls="controls" paths="route" defaults="defaults"></leaflet>
     </div>
 </body>
